[package]
name = "lineapi"
version = "0.1.1"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
edition = "2024"
description = "LINE API library."
repository = "https://github.com/aoyagikouhei/lineapi-rs"
keywords = ["line", "v2", "api"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/lineapi"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1.15", features = ["v4", "serde", "v7"] }
tokio = { version = "1", features = ["time"] }
tracing = "0.1.41"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = "0.3"