[package]
name = "lineapi"
version = "0.5.2"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
edition = "2024"
description = "LINE API library."
repository = "https://github.com/aoyagikouhei/lineapi-rs"
keywords = ["line", "v2", "api"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/lineapi"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4", features = [ "serde" ] }
futures-util = "0.3.31"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "multipart"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
uuid = { version = "1.16", features = ["v4", "serde", "v7"] }

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = "0.3"
