[package]
name = "lineapi"
version = "0.6.2"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
edition = "2024"
description = "LINE API library."
repository = "https://github.com/aoyagikouhei/lineapi-rs"
keywords = ["line", "v2", "api"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/lineapi"

[dependencies]
async-stream = "0.3.6"
base64 = "0.22"
chrono = { version = "0.4", features = [ "serde" ] }
futures-util = "0.3.31"
derive_builder = { version = "0.20", optional = true }
mockito = { version = "1.7", optional = true }
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "multipart"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde", "v7"] }

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
mock = ["mockito", "derive_builder"]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tracing-subscriber = "0.3"
